server/compilers/goLiteJS/src/test/ml1/invalid/func7.go
// variadic function
package main

func f(n... int) {
    return
}
